<resources>
    <string name="app_name">Remote Doorway</string>

    <string name="firebasestorageurl">gs://chatapp-8f220.appspot.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_nearyou">Near You</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_blockedusers">Blocked Users</string>
    <string name="nav_help">Help</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Friends</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_friendrequest">Friend Requests</string>
    <string name="action_app_notificatons">App Notifications</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="btnnearyousendreq">Send Request</string>


    <string name="btnfriendrequestsaccept">Accept</string>
    <string name="btnfriendrequestsreject">Reject</string>

    <string name="fragnofriendrequests">No Requests found!</string>

    <string name="btn_signup_selectimage">Select Profile Picture</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="et_signup_username">Your name</string>
    <string name="tv_signup_gender">Select Gender</string>
    <string name="rb_signup_male">Male</string>
    <string name="rb_signup_female">Female</string>
    <string name="et_signup_mobile">Mobile number</string>
    <string name="etsignupconfirmpassword">Confirm Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="etsignuppassword">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="nonearyoufound">Ohh.. It seems that no user is near you!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="btnsettingschangedp">Change Picture</string>
    <string name="tvsettingsname">Name: </string>
    <string name="tvsettingsphonenumber">Your phone number: </string>
    <string name="tvsettingsemailaddress">Your Email address: </string>
    <string name="btnsettingsupdate">Update</string>
    <string name="btnsettingssignout">Sign Out</string>


    <string name="ty">How can I logout?</string>
    <string name="textView4">Go to Settings, click on the logout button. You will be logged out.</string>
    <string name="textView5">How can I update my Profile pic?</string>
    <string name="textView6">Go to settings, Click on th option of change profile picture. select picture from your device and upload it. Your picture will be updated</string>



</resources>

