<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="remotedoorway.byteme.com.fragment.HelpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:text="@string/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:text="@string/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:id="@+id/textView5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


        <TextView
            android:text="@string/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textAppearance="@style/TextAppearance.AppCompat"
            />

    </LinearLayout>
</FrameLayout>
