<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="remotedoorway.byteme.com.fragment.SettingsFragment">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgvsettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/app_iconlarge" />

            <Button
                android:id="@+id/btnsettingschangedp"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FF5722"
                android:text="@string/btnsettingschangedp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tvsettingsname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvsettingsname"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_below="@+id/tvnearyouusername"
                    android:layout_toEndOf="@+id/imgvnearyouuserdp" />

                <EditText
                    android:id="@+id/etsettingsname"
                    android:layout_width="241dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_signup_username"
                    style="@style/Widget.AppCompat.EditText"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvsettingsphonenumber"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_below="@+id/tvnearyouusername"
                    android:layout_toEndOf="@+id/imgvnearyouuserdp" />

                <TextView
                    android:id="@+id/tvsettingsphonenumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvsettingsphonenumber"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_below="@+id/tvnearyouusername"
                    android:layout_toEndOf="@+id/imgvnearyouuserdp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvsettingsemailaddress"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_below="@+id/tvnearyouusername"
                    android:layout_toEndOf="@+id/imgvnearyouuserdp" />

                <TextView
                    android:id="@+id/tvsettingsemailaddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvsettingsemailaddress"
                    android:textColor="@color/common_google_signin_btn_text_dark_focused"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_below="@+id/tvnearyouusername"
                    android:layout_toEndOf="@+id/imgvnearyouuserdp" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnsettingsupdate"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FF5722"
                android:text="@string/btnsettingsupdate"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnsettingssignout"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FF5722"
                android:text="@string/btnsettingssignout"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>


    </LinearLayout>

</FrameLayout>
